# dirclassifier

./: CMakeLists.txt  README.md
src/: main.cpp  program.cpp  program.hpp
